# python_package_template

./: .gitignore  README.md  init.sh  install_protection_hook.sh  make_release_branch.py  pyproject.toml  release.py  rename_release_branch.py
examples/: stub.py
package/: __init__.py  general.py
tests/: pytest.ini  test_version.py
