[project]
name = "%package_name%"
version = "0.0.0"
description = "%description%"
authors = [
    {name="Frederik F. Van der Veken", email="frederik@cern.ch"}
]
readme = "README.md"
license = {text="Apache-2.0"}

requires-python = ">=3.10"

dependencies = [
    "xtrack",
    "pymadng"
]

[project.optional-dependencies]
tests = ["pytest", "pytest-html", "pytest-xdist"]

[project.urls]
homepage = "https://github.com/%github_user%/%package_name%"
repository = "https://github.com/%github_user%/%package_name%"

[project.entry-points.xobjects]
include = "%package_name%"

[tool.poetry]
exclude = []

[poetry.group.dev.dependencies]
pytest = ">=7.3"
xaux = ">=0.3.12"

[build-system]
# Needed for pip install -e (BTW: need pip version 22)
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
